# ai-tpk

./: .cspell.json  .gitattributes  .gitignore  .markdownlint.json  .oxfmtrc.json  .oxlintrc.json  .shellcheckrc  .yamllint.yml  LICENSE  README.md  build.ts  clean-backups.sh  install.sh  lefthook.yml  mcp-servers.json  package-lock.json  package.json  pnpm-lock.yaml  recover.sh  tsconfig.json
.claude/: CLAUDE.md  constitution.md
.github/: SECURITY.md  dependabot.yml
adapters/: deno.json  test-to-opencode.sh  to-claude.sh  to-claude.ts  to-claude_test.ts  to-opencode.sh  to-opencode.ts  to-opencode_test.ts  types.ts  validate.sh  validate.ts
claude/: CLAUDE.md  settings.json
docs/: AGENTS.md  CONFIGURATION.md  CONTRIBUTING.md  DEMO.md  HARNESS_FEATURES.md  HOOKS.md  INSTALLATION.md  INSTRUCTIONS.md  MCP.md  MYCLAUDE.md  SKILLS.md  SLASH_COMMANDS.md  TPK.md  WORKFLOW_ENTRY_POINTS.md  WORKTREE_ISOLATION.md
dungeon/: README.md  pyproject.toml
dungeon/src/dungeon/: __init__.py  agent.py  graph.py
dungeon/tests/: test_agent.py  test_graph.py  test_smoke.py
installer/: claude.ts  cli.ts  colors.ts  constants.ts  fs-utils.ts  launcher-install.ts  main.ts  mcp.ts
launcher/: README.md  launch.ts  main.ts  myclaude.sh  types.ts
lessons/: candidates.jsonl  recurring.jsonl
opencode/: AGENTS.md
plans/: 20260403-132230-fix-bitsmith-escalation-routing-open-questions.md  20260404-081254-strengthen-dm-bash-policy-open-questions.md  20260410-214917-migrate-npm-to-pnpm-open-questions.md  20260411-120000-optimize-mcp-install-check-open-questions.md  docs-cleanup.md  (+4 more)
(+222 files in other folders)
